firmware-flasher/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etos-firmware-flasher
  labels:
    app.kubernetes.io/name: etos-firmware-flasher
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: "firmware-api.etos.k8s.axis.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: etos-firmware-flasher
                port:
                  number: 80
